Bug 164137 - Accessibility sidebar gives no warnings after last one is fixed
Summary: Accessibility sidebar gives no warnings after last one is fixed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2024-12-03 07:55 UTC by Gabor Kelemen (Collabora)
Modified: 2024-12-04 09:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The last error being fixed in a new document (72.06 KB, image/png)
2024-12-03 07:55 UTC, Gabor Kelemen (Collabora)
Details
New accessibility errors are introduced but there is no warning about them (58.85 KB, image/png)
2024-12-03 07:56 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-12-03 07:55:22 UTC
Created attachment 197909 [details]
The last error being fixed in a new document

When all accessibility errors are fixed, the sidebar no longer reports the newly introduced ones.

1. Open a new Writer document
2. Open the accessibility sidebar
3. It complains about the document title not being set. Click Fix, type something in
-> the error message disappears
4. Press Enter a few times in the document
-> the sidebar should complain about avoiding new lines to create space, but it does not

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ec4415d2a78b1c0fb5eab5baea88508d6b9db43b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started with:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=13ac356a32f279a3fd542d62c12e58abe3d3ad30

author	Balazs Varga <balazs.varga.extern@allotropia.de>	2024-11-22 22:03:56 +0100
committer	Balazs Varga <balazs.varga.extern@allotropia.de>	2024-11-29 12:08:48 +0100
commit 13ac356a32f279a3fd542d62c12e58abe3d3ad30 (patch)

tdf#164048 sw a11y: improve error/warning levels with
Comment 1 Gabor Kelemen (Collabora) 2024-12-03 07:56:02 UTC
Created attachment 197910 [details]
New accessibility errors are introduced but there is no warning about them
Comment 2 Commit Notification 2024-12-03 11:23:10 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1699d29fca758944a5e477b05e61b5f42cc8907c

tdf#164137 - Fix Accessibility sidebar gives no warnings

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.