tdf#164137 - Fix Accessibility sidebar gives no warnings

We need to check rather the update button is visible instead of the
expanders.

Regression from commit: 13ac356a32f279a3fd542d62c12e58abe3d3ad30
(tdf#164048 sw a11y: improve error/warning levels with...)

Change-Id: I63fb5906ad2f7bb13bc5822c284861a419897c4e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177723
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>